# local-memory-stack

./: .gitignore  LICENSE  README.md  backfill_metadata.py  benchmark_memory.py  demo.py  graph_retrieval.py  hybrid_search.py  mailbox.py  maintenance.py  memory_backup.py  memory_ttl_cleanup.py  pyproject.toml  requirements.txt  review_all.py  server.py  test_api.py  test_gliner.py  test_memory_stack.py
src/local_memory_stack/: cli.py  engine.py  hermes_memory_provider.py  hermes_plugin.py  server.py
tests/: test_dedup.py
